cms 算法